--- a/index.html
+++ b/index.html
@@ -6,7 +6,43 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Alura Plus</title>
 </head>
+
 <body>
-    
+
+ <section class="sessao1">
+ <img src="Background.png" alt="Background">
+ <img src="Combo.png" alt="Combo">
+
+ </section>
+
+
+ <section class="sessao2">
+ <img src="Plataformas.png" alt="Plataformas">
+
+ </section>
+
+
+ <section class="sessao3">
+
+    <img src="Plataformas.png" alt="Plataformas">
+
+ </section>
+
+
+ <section class="sessao4">
+
+<img src="Notebook.png" alt="Notebook">
+
+ </section>
+
+
+ <section class="sessao5">
+
+ </section>
+
+ <footer class="rodape"></footer>
+
 </body>
+
+
 </html>
