--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
 <body>
 
- <section class="sessao1">
- <img src="Background.png" alt="Background">
- <img src="Combo.png" alt="Combo">
+ <section class="sessao1 principal container">
+    <div>
+        <h1 class="container_caixa">com o combo+, você pode aproveitar a alura+ e o alura língua por um preço unico</h1>
+    </div>
+
+ <img src="Combo.png" alt="Combo" class="container__imagem">
+ <a href="www.alura.com.br" class="container_botao">Assine por 12x dde R$120,00</a>
+<a href="www.alura.com.br" class="container_botao">Assinar somente o alura+</a>
 
  </section>
 
@@ -37,10 +42,14 @@
 
 
  <section class="sessao5">
-
+   <img src="tv.png" alt="tv">
+   <img src="computador.png" alt="computador">
+   <img src="celular.png" alt="celular">
  </section>
 
- <footer class="rodape"></footer>
+ <footer class="rodape">
+
+ </footer>
 
 </body>
 
