--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
  <img src="Combo.png" alt="Combo" class="container__imagem">
  <a href="www.alura.com.br" class="container_botao">Assine por 12x dde R$120,00</a>
 <a href="www.alura.com.br" class="container_botao">Assinar somente o alura+</a>
+<p class="container__aviso"
 
  </section>
 
