--- a/index.html
+++ b/index.html
@@ -22,13 +22,28 @@
  </section>
 
 
- <section class="sessao2">
- <img src="Plataformas.png" alt="Plataformas">
+ <section class="sessao2 container secundario">
+ <img src="Plataformas.png" alt="Plataformas" class="secundario__imagem" >
+
+
+   <div class="container__descricao">
+     <h2 class="descricao__titulo"> Assista do seu jeito</h2>
+     <p class="descrição__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa selação de cursos não para de crescer</p>
+
+  </div>
 
  </section>
 
 
- <section class="sessao3">
+ <section class="sessao3 container secundario">
+
+    <div class="container__descricao">
+      <p class="descrição__texto">
+        Só o Combo + oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+        tecnologia e aprender inglês ou espanhol, de onde e como quiser.
+      </p>
+      <a href="www.alura.com.br" class="container__botao secundario__botao"> Asine o combo+</a>
+    </div>
 
     <img src="Plataformas.png" alt="Plataformas">
 
