--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
  <section class="sessao1 principal container">
     <div>
-        <h1 class="container_caixa">com o combo+, você pode aproveitar a alura+ e o alura língua por um preço unico</h1>
-    </div>
+        <h1 class="container_caixa">com o combo+, você pode aproveitar a alura+ e o alura língua por um preço único</h1>
 
  <img src="Combo.png" alt="Combo" class="container__imagem">
  <a href="www.alura.com.br" class="container_botao">Assine por 12x dde R$120,00</a>
-<a href="www.alura.com.br" class="container_botao">Assinar somente o alura+</a>
-<p class="container__aviso"
+<a href="www.alura.com.br" class="container_botao botao_secundario">Assinar somente o alura+</a>
+<p class="container__aviso">*O preço pode variar caso a assinatur seja feita e outros planos.</p>
+ 
+</div>
 
- </section>
+
+</section>
 
 
  <section class="sessao2 container secundario">
@@ -31,23 +34,20 @@
    <div class="container__descricao">
      <h2 class="descricao__titulo"> Assista do seu jeito</h2>
      <p class="descrição__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa selação de cursos não para de crescer</p>
-
+ <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
   </div>
+  <img src="Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+
 
  </section>
 
-
  <section class="sessao3 container secundario">
-
+<img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura  aberta" class="secundario__imagem">
     <div class="container__descricao">
-      <p class="descrição__texto">
-        Só o Combo + oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-        tecnologia e aprender inglês ou espanhol, de onde e como quiser.
-      </p>
-      <a href="www.alura.com.br" class="container__botao secundario__botao"> Asine o combo+</a>
+      <h2 class="descricao__titulo">Baixe seus cursos</h2>
+      <p class="descrição__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
     </div>
 
-    <img src="Plataformas.png" alt="Plataformas">
 
  </section>
 
