--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Alura Plus</title>
     <meta charset="UTF-8">
@@ -12,34 +13,31 @@
 
 <body>
 
+
+
  <section class="sessao1 principal container">
     <div>
         <h1 class="container_caixa">com o combo+, você pode aproveitar a alura+ e o alura língua por um preço único</h1>
-
  <img src="Combo.png" alt="Combo" class="container__imagem">
  <a href="www.alura.com.br" class="container_botao">Assine por 12x dde R$120,00</a>
 <a href="www.alura.com.br" class="container_botao botao_secundario">Assinar somente o alura+</a>
 <p class="container__aviso">*O preço pode variar caso a assinatur seja feita e outros planos.</p>
- 
 </div>
-
-
 </section>
+
 
 
  <section class="sessao2 container secundario">
  <img src="Plataformas.png" alt="Plataformas" class="secundario__imagem" >
-
-
    <div class="container__descricao">
      <h2 class="descricao__titulo"> Assista do seu jeito</h2>
      <p class="descrição__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa selação de cursos não para de crescer</p>
  <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
   </div>
   <img src="Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
-
-
  </section>
+
+
 
  <section class="sessao3 container secundario">
 <img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura  aberta" class="secundario__imagem">
@@ -47,29 +45,58 @@
       <h2 class="descricao__titulo">Baixe seus cursos</h2>
       <p class="descrição__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
     </div>
-
-
  </section>
 
 
- <section class="sessao4">
 
-<img src="Notebook.png" alt="Notebook">
-
+ <section class="dipositivos">
+  <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+  <ul class="dispositivos__lista">
+    <li>
+      <img src="tv.png" alt="ícone de televisão">
+      <h3 class="lista__item">TV</h3>
+    </li>
+    <li>
+      <img src="computador.png" alt="ícone de computador">
+      <h3 class="lista__item">celular</h3>
+    </li>
+  </ul>
  </section>
 
 
- <section class="sessao5">
-   <img src="tv.png" alt="tv">
-   <img src="computador.png" alt="computador">
-   <img src="celular.png" alt="celular">
- </section>
 
  <footer class="rodape">
-
+  <img src="Logo.png" alt="Alura+" class="rodape__logo">
+  <ul class="rodape__lista">
+    <li class="lista__link">
+      <a href="#">Idioma</a>
+    </li>
+    <li class="lista__link">
+      <a href="#">Dispositivos copatíveis</a>
+    </li>
+    <li class="lista__link">
+      <a href="#">Contrato de assinatura</a>
+    </li>
+    <li class="lista__link">
+      <a href="#">Politica de provacidade</a>
+    </li>
+    <li class="lista__link">
+      <a href="#">Proteção de dados no Brasol</a>
+    </li>
+    <li class="lista__link">
+      <a href="#">Anuncios personslizados</a>
+    </li>
+    <li class="lista__linl">
+      <a href="#">Ajuda</a>
+    </li>
+  </ul>
+  <p class="rodape__texto">2021 Alura, Alura+ e AluraLíngua. Todod os direitos reservados.
+    Serviço de assinaturapaga. Conteúdo sujeito a disponibilidade.</p>
+    <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeitoa termos e 
+      condições. O sesrvoço Alura+ é comercializado po Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185-
+      Liberdade, São Paulo- SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
  </footer>
 
 </body>
-
 
 </html>
